남기석/redis/src/main/java/com/example/demo/infra/errors/ControllerAdvice.java
package com.example.demo.infra.errors;

import org.springframework.web.bind.annotation.RestControllerAdvice;

@RestControllerAdvice
public class ControllerAdvice {
    //todo exceptionHandler
}
